--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,9 @@
 @import "./icon.less";
+
+.page-nav-bar{
+  background-color: #3296fa;
+  .van-nav-bar__title,
+  .van-button__text, .van-icon {
+    color: #fff;
+  }
+}
